@@ -84,6 +84,9 @@ OmegaT-Plugin: filter
 Name: org.omegat.filters3.xml.flash.FlashFilter
 OmegaT-Plugin: filter
 
+Name: org.omegat.filters3.xml.txml.TXMLFilter
+OmegaT-Plugin: filter
+
 Name: org.omegat.core.matching.Tokenizer
 OmegaT-Plugin: tokenizer
 
